# SMS-Gateway-Android

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASE.md  index.html  package.json  proxy.js  start.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
css/: design-system.css
frontend/: README.md  index.html  manifest.json  package.json
frontend/css/: design-system.css
frontend/js/: storage.js  toast.js
js/: api.js  app.js  storage.js
lib/: db.js  proxy-handler.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  embedded.rs  lib.rs  main.rs  models.rs  proxy.rs  scheduler.rs  server.rs
