[package]
name = "android-sms-gateway-dashboard"
version = "2.0.0"
description = "A desktop dashboard for managing SMS messaging through your Android device"
authors = ["Max"]
license = "MIT"
edition = "2021"

[lib]
name = "sms_gateway_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "android-sms-gateway-dashboard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tower = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
url = "2"
